--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -1,5 +1,3 @@
-- name: checkout
-- uses: actions/checkout@v3
 name: Unit Tests
 run-name: Run Unit Tests
 on:
@@ -11,6 +9,8 @@ jobs:
   unit_testing:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Run Unit Tests
         run: |
           chmod +x ./test/unit-tests.sh
