--- a/.github/workflows/pull-request-to-main.yml
+++ b/.github/workflows/pull-request-to-main.yml
@@ -38,10 +38,10 @@ jobs:
       - name: Install curl
         run: apt-get -y update; apt-get -y install curl
       - name: Set variable a in 123
-        run: curl -X POST -F 'value=123' http://localhost:5000/var/a
+        run: curl -X POST -F 'value=123' http://192.168.0.110:5000/var/a
       - name: Test getting the value of a variable
         run: |
-          VALUE=$(curl http://localhost:5000/var/a)
+          VALUE=$(curl http://192.168.0.110:5000/var/a)
           if [ "$VALUE" != "123" ]; then
           exit 1
           else
